Updating projects, education, and work history

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
         <div id="w-node-_1" class="about-head-text-wrap">
           <h2 class="hi-there-heading">Hi! I&#x27;m <span class="text-span-2">Simone</span>.</h2>
           <div class="label cc-about-light"><span class="text-span-7">It&#x27;s nice to meet you.</span></div>
-          <p class="paragraph-light"><br>I am currently a senior studying Computer Science at <span
-              class="highlight-pink">Cornell University</span><span> </span>within the College of Engineering . I
-            additionally study Law and Information Ethics, Law, and Policy to investigate the <span
-              class="highlight-orange">intersection of technology, politics, and policy</span>. I am actively pursuing
-            graduate education and roles concentrating in <span class="highlight-pink">the field of
+          <p class="paragraph-light"><br>I am currently a Master's student in Security Informatics at <span
+              class="highlight-pink">Johns Hopkins University</span><span> </span>within the Whiting College of
+            Engineering.
+            I am a recent Cornell University graduate, having studied Computer Science and
+            Information Ethics, Law, and Policy to investigate the <span class="highlight-orange">intersection of
+              technology, politics, and policy</span>. I am actively pursuing
+            roles concentrating in <span class="highlight-pink">the field of
               cybersecurity</span>.</p>
           <div class="w-layout-blockcontainer container-2 w-container">
             <a href="#about" class="button-2 w-button pill-shape">More About Me &gt;</a>
