--- a/projects/project-1.html
+++ b/projects/project-1.html
@@ -101,8 +101,7 @@
           <a href="https://www.youtube.com/watch?v=pKL6qqgKkUI" target="_blank" class="footer-item">VIDEO</a><img
             src="../images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
             srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
-          <a href="https://github.coecis.cornell.edu/sfg63/cs3110-finalproject.git" target="_blank"
-            class="footer-item">REPOSITORY</a>
+          <a href="https://github.com/simonegreen/cmdline-mancala" target="_blank" class="footer-item">REPOSITORY</a>
         </div>
       </div>
     </div>
