--- a/projects/project-4.html
+++ b/projects/project-4.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Decoding Diversity</title>
+  <title>Generative News Topic Headlines</title>
   <meta content="Project 4" property="og:title">
   <meta content="Project 4" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
