--- a/projects/project-5.html
+++ b/projects/project-5.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>U.S. Gun Violence</title>
-  <meta content="Project 2" property="og:title">
-  <meta content="Project 2" property="twitter:title">
+  <title>Global EdQuest</title>
+  <meta content="Project 5" property="og:title">
+  <meta content="Project 5" property="twitter:title">
   <meta property="og:image" content="../images/simone-logo.jpeg">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
@@ -49,64 +49,70 @@
     <a href="../projects/project-home.html" class="button-3 w-button">X</a>
   </div>
   <div class="section">
-    <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe width="560" height="315"
-        src="https://www.youtube.com/embed/kQ2kuSMTewg?si=PgiWRFT21_ApXNVH" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe></div>
+    <!-- <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe
+        src="https://docs.google.com/presentation/d/e/2PACX-1vRPX9l6dY1-gMVmtV384DMfy-ISh2igRLODq--dIxwYHbYWj_mXNPa28XBi3Qqv-4b3jXBNYPHFzVhk/embed?start=false&loop=false&delayms=3000"
+        frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true"
+        webkitallowfullscreen="true"></iframe></div> -->
     <div class="w-layout-blockcontainer container-5 w-container">
-      <h1 class="heading">U.S. Gun Violence:<br>Before and After COVID-19</h1>
+      <h1 class="heading">Global EdQuest - Study Abroad Recommender</h1>
       <p class="paragraph-8"><span class="highlight-orange">Description</span>:<br>This was a group project, as
-        part of the final for the course titled: <a href="https://jeffrz.com/info3300/" target="_blank"> Data Driven
-          Web-Applications.
+        part of the capstone for the course titled: <a
+          href="https://classes.cornell.edu/browse/roster/SP24/class/CS/4300" target="_blank"> Language and
+          Information.
         </a></p> See the embeded page below or click here to visit the
-      interactive page! <a text-align=center target="_blank"
-        href="https://pages.github.coecis.cornell.edu/sfg63/info3300-p2/"><strong>CLICK
+      interactive application! <a text-align=center target="_blank"
+        href="http://4300showcase.infosci.cornell.edu:5168/"><strong>CLICK
           HERE</strong><br><br></a>More details to come!<br><br>
+
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
         <p><span class="highlight-pink">Skills &amp; Tools</span></p>
       </section>
       <ul role="list" class="list-2">
-        <li class="list-item-4"><strong>Programming Languages:</strong> HTML, CSS, JavaScript</li>
-        <li><strong>Tools: </strong>Git, Pandas, Matplotlib</li>
+        <li class="list-item-4"><strong>Programming Languages:</strong> Python, HTML/CSS</li>
+        <li><strong>Tools: </strong>Git, NLTK, Pandas, Numpy, Matplotlib, Jupyter Notebooks</li>
+        <li><strong>Other: </strong> </li>
       </ul>
-      <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
+      <!-- <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
         <p class="highlight-pink"> Takeaways</p>
-      </section>
-      <ul role="list" class="list-2">
-        <li class="list-item-4"><strong> Continuous Learning:</strong></li> Given that this was the final project of the
-        class, our team didn't expect to struggle as much as we did in figuring out how to create the outcomes we
-        desired. It additional initiative on our part to continue seeking out resources beyond the class to get the
-        information necessary to solve our problems. This showed be tangibly how there will always be more to learn, and
-        the skill can always be further improved even when formal education is completed.
-
-
-      </ul>
+      </section> -->
+      <!-- <ul role="list" class="list-2">
+        <li class="list-item-4"><strong>The Social Impacts of Technology:</strong> As alluded to, the outcome of this
+          project,
+          while fairly successful, showed us how issues related to skewed datasets can have massive impacts on the
+          correctness of predictions. Furthermore, our project challenged us to look into the implications of such
+          issues. </li>
+        <li><strong>Cross-Cultural Work Environment:</strong> This project was part of a study abroad program, and it
+          involved
+          a mult-national and lingual team; it was a great opportunity to learn different styles of work and navigate
+          differences of communication, conflict, and other aspects of work management.
+        </li>
+      </ul> -->
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
           sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" class="image-3">
         <p class="highlight-pink">Links</p>
       </section>
       <div class="w-layout-blockcontainer w-container">
-        <div class="footer-links-copy"><img src="../images/youtube-logo.jpeg" width="25"
-            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
-            srcset="../images/youtube-logo.jpeg 500w, ../images/youtube-logo.jpeg 800w, ../images/youtube-logo.jpeg 1080w, ../images/youtube-logo.jpeg 1200w"
-            alt="" class="logo">
-          <a href="https://www.youtube.com/watch?v=kQ2kuSMTewg" target="_blank" class="footer-item">VIDEO</a><img
-            src="../images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
+        <div class="footer-links-copy">
+          <!-- <img src="../images/paper.png" width="25"
+            sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="../images/paper.png" alt=""
+            class="logo"> -->
+          <!-- <a href="https://docs.google.com/document/d/1mgm-D8_NawOO2RVogTfPVFkSA12sjV1w9guMWJMmWQw/edit?usp=sharing"
+            target="_blank" class="footer-item">PAPER</a> -->
+          <img src="../images/github-logo.png" width="25" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px"
             srcset="../images/github-logo-p-500.png 500w, ../images/github-logo.png 512w" alt="" class="logo">
-          <a href="https://github.coecis.cornell.edu/sfg63/info3300-p2" target="_blank"
-            class="footer-item">REPOSITORY</a>
+          <a href="https://github.com/sd625/Global-EdQuest" target="_blank" class="footer-item">REPOSITORY</a>
         </div>
       </div>
     </div>
   </div><br>
   <h3 class="heading-3">Embedded Interactive Page:</h3>
   <div style="padding-top:56.17021276595745%" class="w-video w-embed">
-    <iframe width=100% src="https://pages.github.coecis.cornell.edu/sfg63/info3300-p2/"></iframe>
+    <iframe width=100% src="http://4300showcase.infosci.cornell.edu:5168/"></iframe>
   </div>
 
   <div class="footer-wrap">
