--- a/work.html
+++ b/work.html
@@ -86,6 +86,24 @@
       <div>
       </div>
       <section>
+
+        <div class="w-layout-blockcontainer logo-left-lister w-container"><img
+            src="images/jhu-whiting-logo-transparent.png" loading="lazy" width="213" alt="" class="image">
+          <div class="w-layout-blockcontainer w-container">
+            <p class="paragraph-3"><span class="highlight-pink"><strong>Johns Hopkins University</strong></span>
+              <br><em>Whiting College of Engineering</em><br>Master&#x27;s of Science in Security
+              Informatics<br>‍
+            </p>
+            <p class="paragraph-6"><span class="highlight-orange">Relevant Courses</span>:</p>
+            <ul role="list">
+              <li>Cryptography</li>
+              <li>Cybersecurity Risk &amp; Compliance</li>
+              <li>Critical Infrastructure Protection</li>
+            </ul>
+
+          </div>
+          <p class="paragraph-4"><strong>Expected</strong>: December 2025<br><!-- GPA</strong>: 3.74 (Cum Laude)--></p>
+        </div>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cornell-logo-3.gif"
             loading="lazy" width="213" alt="" class="image">
           <div class="w-layout-blockcontainer w-container">
@@ -118,7 +136,7 @@
               </div>
             </div>
           </div>
-          <p class="paragraph-4"><strong>Grad</strong>: May 2024<br><strong>GPA</strong>: 3.7</p>
+          <p class="paragraph-4"><strong>Grad</strong>: May 2024<br><strong>GPA</strong>: 3.74 (Cum Laude)</p>
         </div>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/dis-logo.svg" loading="lazy"
             width="240" alt="" class="image-2">
@@ -155,16 +173,16 @@
                   Assistant</strong></span>, <br>‍<strong><em>Cornell Bowers College of Computing
                   &amp; Information Science</em></strong><br></p>
             <ul role="list" class="list">
-              <li class="list-item"> Assist in general organization, communications, and grading for Computer
+              <li class="list-item"> Assisted in general organization, communications, and grading for Computer
                 System Organization course of <strong>350+ students</strong> </li>
-              <li class="list-item-2">Co-lead weekly lab section of <strong>40 students </strong>and host weekly
+              <li class="list-item-2">Co-led weekly lab section of <strong>40 students </strong>and host weekly
                 office hours to reinforce content and address questions. </li>
-              <li class="list-item-3">Act as a liaison between course staff and the Engineering Learning office
+              <li class="list-item-3">Served as a liaison between course staff and the Engineering Learning office
                 to
                 direct content for supplemental courses. </li>
             </ul>
           </div>
-          <p class="paragraph-4">July 2022 - Present<br><em>Ithaca, NY</em></p>
+          <p class="paragraph-4">July 2022 - May 2024<br><em>Ithaca, NY</em></p>
         </div>
         <div class="w-layout-blockcontainer logo-right-lister w-container"><img src="images/blackrock-circle.png"
             loading="lazy" height="160" alt="" class="company-logo">
