--- a/projects/project-home.html
+++ b/projects/project-home.html
@@ -71,7 +71,7 @@
     <div class="container-3">
       <h2 class="heading">My Projects</h2>
       <p class="paragraph-7">Here are some of the projects I have completed throughout my academic journey.<br>Click the
-        arrows under each project to learn more!</p>
+        arrows under each project to learn more, and slide over to view them all!</p>
       <div data-delay="4000" data-animation="slide" class="team-slider-wrapper w-slider" data-autoplay="false"
         data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0"
         data-nav-spacing="12" data-duration="500" data-infinite="true">
@@ -149,13 +149,12 @@
             </div>
           </div>
           <div class="proj-slide w-slide">
-            <div class="projects"><img
-                src="https://uploads-ssl.webflow.com/62434fa732124a0fb112aab4/62434fa732124af1aa12aadf_placeholder%201.svg"
-                loading="lazy" alt="" class="proj-image">
+            <div class="projects"><img src="../images/ed_quest.png" loading="lazy" alt="" class="proj-image">
               <div class="proj-info">
-                <h3 class="proj-name">Coming Soon!</h3>
-                <p class="proj-description">Future projects in the works.</p>
-                <a href="#" class="text-link-arrow w-inline-block">
+                <h3 class="proj-name">Global EdQuest</h3>
+                <p class="proj-description">A natural language processing web application that produces
+                  recommendations for Cornell-approved study abroad programs.</p>
+                <a href="../projects/project-5.html" class="text-link-arrow w-inline-block">
                   <div>Learn More</div>
                   <div class="arrow-embed w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
