typo in Cornell courses

--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
                 <ul role="list">
                   <li>Objected Oriented/Functional Programming &amp; Data Structures </li>
                   <li>Backend Development </li>
-                  <li>Discret Structures</li>
+                  <li>Discrete Structures</li>
                   <li>Analysis of Algorithms</li>
                 </ul>
               </div>
@@ -130,8 +130,8 @@
                 <ul role="list">
                   <li>Law, Politics, &amp; Policy of Cybersecurity</li>
                   <li>Information Ethics, Law, and Policy</li>
-                  <li>Backend Development</li>
                   <li>Operating Systems</li>
+                  <li>Elementary Arabic I &amp; II</li>
                 </ul>
               </div>
             </div>
