add details to edquest

--- a/projects/project-5.html
+++ b/projects/project-5.html
@@ -59,10 +59,21 @@
         part of the capstone for the course titled: <a
           href="https://classes.cornell.edu/browse/roster/SP24/class/CS/4300" target="_blank"> Language and
           Information.
-        </a></p> See the embeded page below or click here to visit the
+        </a><br>
+        This project utilizes information retrieval techniques to create a web application to provide recommendations
+        for study abroad programs.
+        We created this in response to the lack of resources available for college study abroad; although some broad
+        travel destination recommenders and general advice from
+        Cornell's Global Learning office exist, none provide an interactive experience specific to an academic
+        institution.
+        <br><br>The target audience of this application was Cornell students who were either unsure of study abroad
+        options or attempting to narrow down their choices. This project hoped to provide clarity for these students by
+        recommending the best study abroad programs based on their interests/preferences.
+      </p> See the embeded page below or click here to visit the
       interactive application! <a text-align=center target="_blank"
-        href="http://4300showcase.infosci.cornell.edu:5168/"><strong>CLICK
-          HERE</strong><br><br></a>More details to come!<br><br>
+        href="https://tinyurl.com/globaledquest"><strong>CLICK
+          HERE</strong><br><br></a>
+      <br>
 
       <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
@@ -72,7 +83,7 @@
       <ul role="list" class="list-2">
         <li class="list-item-4"><strong>Programming Languages:</strong> Python, HTML/CSS</li>
         <li><strong>Tools: </strong>Git, NLTK, Pandas, Numpy, Matplotlib, Jupyter Notebooks</li>
-        <li><strong>Other: </strong> </li>
+        <li><strong>Other: </strong> Single Value Decomposition (SVD), Jaccard Similarity, Sentiment Analysis</li>
       </ul>
       <!-- <section class="section-3"><img src="../images/star-circle.png" loading="lazy" width="25" height="25" alt=""
           srcset="../images/star-circle.png 500w, ../images/star-circle.png 692w"
@@ -112,7 +123,7 @@
   </div><br>
   <h3 class="heading-3">Embedded Interactive Page:</h3>
   <div style="padding-top:56.17021276595745%" class="w-video w-embed">
-    <iframe width=100% src="http://4300showcase.infosci.cornell.edu:5168/"></iframe>
+    <iframe width=80% src="https://tinyurl.com/globaledquest"></iframe>
   </div>
 
   <div class="footer-wrap">
