Updating present involvements

--- a/activities.html
+++ b/activities.html
@@ -96,10 +96,10 @@
         <div class="w-layout-blockcontainer container-8 w-container">
           <p class="paragraph-3"><span class="highlight-pink"><strong>Alpha Phi Omega </strong></span>(Community Service
             Fraternity)<strong><em></em></strong><br></p>
-          <p class="paragraph-4">February 2021 to Present<br></p>
+          <p class="paragraph-4">February 2021 to May 2024<br></p>
           <h6 class="heading-4">Involvement:</h6>
           <ul role="list" class="list">
-            <li class="list-item">Recruitment / New Member Education Assistant, November 2023 to Present</li>
+            <li class="list-item">Recruitment / New Member Education Assistant, November 2023 to May 2024</li>
             <li class="list-item">Family Head and Event Planner, Jan 2022 to May 2022 </li>
           </ul>
         </div>
@@ -107,45 +107,27 @@
       <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/star-circle.png" loading="lazy"
           width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
         <div class="w-layout-blockcontainer container-8 w-container">
-          <p class="paragraph-3"><span class="highlight-pink"><strong>Community Volunteering </strong></span>(<a
-              style="text-decoration:none; display:inline" href="https://elevationchurch.org/ekidz/"
-              target="_blank">Elevation
-              Church</a> / <a style="text-decoration:none; display:inline" href="https://yourjourney.tv/code-red/"
-              target="_blank">The
-              Journey Church</a>)<strong><em></em></strong></p>
-          <p class="paragraph-4">JUNE 2022 to Present<br></p>
+          <p class="paragraph-3"><span class="highlight-pink"><strong>Community Volunteering </strong></span></p>
+          <p class="paragraph-4">JUNE 2022 to PRESENT<br></p>
           <h6 class="heading-4">Involvement:</h6>
           <ul role="list" class="list">
-            <li class="list-item">Elevation Church: Community Childcare Volunteer, June 2022 - Aug 2022</li>
-            <li class="list-item">The Journey Church: Code Red Volunteer , June 2022 to Present </li>
+            <li class="list-item"><a style="text-decoration:none; display:inline"
+                href="https://elevationchurch.org/ekidz/" target="_blank">Elevation Church - Uptown:</a> eKidz
+              Childcare Volunteer, June 2022 - Aug 2022</li>
           </ul>
         </div>
       </div>
-      <!-- <div class="w-layout-blockcontainer logo-left-lister w-container"><a href="https://www.cornellthetatau.com/"
-          target="_blank"><img src="images/theta-tau-logo.png" loading="lazy" width="161"
-            sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo"></a>
-        <div class="w-layout-blockcontainer container-8 w-container">
-          <p class="paragraph-3"><a style="text-decoration:none" href="https://www.cornellthetatau.com/brotherhood/"
-              target="_blank"><span class="highlight-pink"><strong>Cornell Theta Tau </strong></span>(Professional
-              Engineering Fraternity)<strong><em></em></strong></a></p>
-          <p class="paragraph-4">September 2022 to Present<br></p>
-          <h6 class="heading-4">Involvement:</h6>
-          <ul role="list" class="list">
-            <li class="list-item"><strong>Executive Board: </strong>Diversity and Inclusion Chair, May 2023 to Present
-            </li>
-          </ul>
-        </div>
-      </div> -->
+      <!--  -->
       <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cru-logo.jpeg" loading="lazy"
           width="161" sizes="(max-width: 479px) 100vw, 160px" alt="" class="company-logo">
         <div class="w-layout-blockcontainer container-8 w-container">
           <p class="paragraph-3"><span class="highlight-pink"><strong>Cru
                 Cornell</strong></span><strong><em></em></strong><br></p>
-          <p class="paragraph-4">September 2020 to Present<br></p>
+          <p class="paragraph-4">September 2020 to May 2024<br></p>
           <h6 class="heading-4">Involvement:</h6>
           <ul role="list" class="list">
-            <li class="list-item">Community Team Leader, July 2022 to Present</li>
-            <li class="list-item-3">Worship Team Member, Sept 2021 to Present </li>
+            <li class="list-item">Community Team Leader, Sept 2021 to May 2024 </li>
+            <li class="list-item-3">Worship Team Member, Aug 2022 to May 2024</li>
           </ul>
         </div>
       </div>
@@ -154,10 +136,10 @@
         <div class="w-layout-blockcontainer container-9 w-container">
           <p class="paragraph-3"><span class="highlight-pink"><strong>NSBE Cornell </strong></span>(National Society of
             Black Engineers)<strong><em></em></strong><br></p>
-          <p class="paragraph-4">May 2021 to Present<br></p>
+          <p class="paragraph-4">May 2021 to May 2024<br></p>
           <h6 class="heading-4">Involvement:</h6>
           <ul role="list" class="list">
-            <li class="list-item-3">Upperclassmen Mentor, Aug 2023 to Present </li>
+            <li class="list-item-3">Upperclassmen Mentor, Sept 2023 to Dec 2023 </li>
           </ul>
         </div>
       </div>
@@ -166,12 +148,12 @@
         <div class="w-layout-blockcontainer w-container">
           <p class="paragraph-3"><span class="highlight-pink"><strong>URMC </strong></span>(Underrepresented Minorities
             in Computing)<strong><em></em></strong><br></p>
-          <p class="paragraph-4">May 2021 to Present<br></p>
+          <p class="paragraph-4">May 2021 to May 2024<br></p>
           <h6 class="heading-4">Involvement:</h6>
           <ul role="list" class="list">
             <li class="list-item"><strong>Executive Board:</strong> Secretary (FA 2021), Mentorship Chair (SP 2022),
               Outreach Director (FA 2022)</li>
-            <li class="list-item-3">Upperclassmen Mentor, Sept 2022 to Present </li>
+            <li class="list-item-3">Mentor, Feb 2022 to Dec 2022 </li>
             <li class="list-item"><strong>Conferences:</strong> Tapia Conference 2022, Grace Hopper Conference 2023</li>
           </ul>
         </div>
@@ -196,13 +178,9 @@
           <div class="w-layout-blockcontainer box w-container"><img src="images/journey-serve.JPG" loading="lazy"
               width="409" sizes="(max-width: 479px) 100vw, (max-width: 767px) 47vw, (max-width: 991px) 344px, 409px"
               alt="">
-            <div class="text-block-3">The Journey Church Volunteer, July 2023</div>
+            <div class="text-block-3">CodeRed Food Distribution Volunteer, July 2023</div>
           </div>
-          <!-- <div class="w-layout-blockcontainer box w-container"><img src="images/theta-tau.JPG" loading="lazy"
-              width="409" sizes="(max-width: 479px) 100vw, (max-width: 767px) 47vw, (max-width: 991px) 344px, 409px"
-              alt="">
-            <div class="text-block-3">Cornell Theta Tau, November 2022</div>
-          </div> -->
+
         </div>
         <div class="w-layout-blockcontainer horiz-boxes w-container">
           <div class="w-layout-blockcontainer box w-container"><img src="images/urmc-table.jpg" loading="lazy"
@@ -226,10 +204,7 @@
             sizes="(max-width: 582px) 100vw, 582px" alt="">
           <div class="text-block-3">The Journey Church Volunteer, July 2023</div>
         </div><br>
-        <div id="tt-pic" class="w-layout-cell cell-2"><img src="images/theta-tau.JPG" loading="lazy"
-            sizes="(max-width: 582px) 100vw, 582px" alt="">
-          <div class="text-block-3">Cornell Theta Tau, November 2022</div>
-        </div><br>
+        
         <div id="urmc-pic" class="w-layout-cell cell"><img src="images/urmc-table.jpg" loading="lazy" width="422"
             sizes="(max-width: 479px) 100vw, 422px" alt="">
           <div class="text-block-3">URMC, September 2022</div>
