--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@
             src="images/jhu-whiting-logo-transparent.png" loading="lazy" width="213" alt="" class="image">
           <div class="w-layout-blockcontainer w-container">
             <p class="paragraph-3"><span class="highlight-pink"><strong>Johns Hopkins University</strong></span>
-              <br><em>Whiting School of Engineering</em><br>Master&#x27;s of Science in Security
+              <br><em>Whiting School of Engineering</em><br>Master of Science in Security
               Informatics<br>‍
             </p>
             <p class="paragraph-6"><span class="highlight-orange">Relevant Courses</span>:</p>
@@ -102,14 +102,14 @@
             </ul>
 
           </div>
-          <p class="paragraph-4"><strong>Expected</strong>: December 2025<br>GPA</strong>: 3.93</p>
+          <p class="paragraph-4"><strong>Expected</strong>: December 2025<br><strong>GPA</strong>: 3.93</p>
         </div>
         <div class="w-layout-blockcontainer logo-left-lister w-container"><img src="images/cornell-logo-3.gif"
             loading="lazy" width="213" alt="" class="image">
           <div class="w-layout-blockcontainer w-container">
             <p class="paragraph-3"><span class="highlight-pink"><strong>Cornell University</strong></span>,
               <em>College of Engineering</em><br><em>Bowers College of Computing and Information
-                Science</em><br>Bachelor&#x27;s of Science in Computer Science<br>‍<br><span
+                Science</em><br>Bachelor of Science in Computer Science<br>‍<br><span
                 class="highlight-orange">Minors</span>:<br>
             </p>
             <ul role="list">
